# libcbor

./: CMakeLists.txt
examples/: CMakeLists.txt
src/: CMakeLists.txt  cbor.c
src/cbor/: floats_ctrls.c  ints.c  serialization.c
src/cbor/internal/: loaders.c
test/: CMakeLists.txt  bad_inputs_test.c  fuzz_test.c
